<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dp_v4</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    
      <string name="depart">Depart</string>
    <string name="arrive">Destination</string>
      <string name="search">Search</string>
     <string name="clear">Clear fields</string>
     <string name="reg">Reg</string>
     <string name="expenses">Expences</string>
     <string name="currentLocation">Use Current Location</string>
    <string name="totalDistance">Total Distance</string>
    <string name="fill_up">Fill Up</string>
    <string name="planner">Planner</string>
    <string name="overall">Overall</string>
    <string name="your_vechile">Vechile</string>
     <string name="edit_your_details">Edit Details</string>
      <string name="change_vechile">Change Vechile</string>
  
    <string name="details">Details</string>
    <string name="internet">Internet</string>
 	
 	<string name="menu">Menu</string>
 	<string name="updateDetails">Update Details</string>
 	<string name="enter_details">Enter Details</string>
 	<string name="calcTipAmount">Total Amount</string>
 	<string name="startMileage">Start Mileage</string>
 	<string name="name">Name</string>
 	<string name="company">Company</string>
 	
 	
 		<string name="notes">Notes</string>
 	<string name="hotel">Hotel</string>
 	<string name="food">Food</string>
 	<string name="materials">Materials</string>
 	<string name="other">Other</string>
 	
    <string name="mileage">Mileage</string>
    <string name="date">Date</string>
    <string name="qty">Qty</string>
    <string name="price_per">Price/Ltr</string>
    <string name="calculateAmount">Calculate</string>
    <string name="tipAmount"></string>
    <string name="totalAmount">Total Amount</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
 	
</resources>
