<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="10dp" >

 <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="40dp"        
        android:orientation="horizontal" >
        <TextView
            android:text="@string/mileage"
  			android:layout_width="0dp"
            android:layout_weight="1"
           android:background="@drawable/fillupmenubutton"
           android:fontFamily="sans-serif-light"
           android:gravity="center"
            android:layout_height="40dp"/>
              
        <EditText
            android:id="@+id/editMileage"
            android:layout_width="70dp"
            android:layout_weight="2"
            android:inputType="phone"
            android:lines="1"
            android:fontFamily="sans-serif-light"
           android:gravity="center"
            android:layout_height="40dp"
            android:maxLines="1" />

    </LinearLayout>    
      
   <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
       
        android:orientation="horizontal" >
        <TextView
            android:text="@string/qty"
  			android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/fillupmenubutton"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:layout_height="40dp"
           />
              
        <EditText
            android:id="@+id/editQty"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
           android:inputType="phone"
           android:fontFamily="sans-serif-light"
           android:gravity="center"
            android:lines="1"
            android:maxLines="1" />

    </LinearLayout>  
  <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        
        android:orientation="horizontal" >
        <TextView
            android:text="@string/price_per"
  			android:layout_width="0dp"
            android:layout_weight="1"
           android:background="@drawable/fillupmenubutton"
            android:fontFamily="sans-serif-light"
           android:gravity="center"
            android:layout_height="40dp"/>
              
        <EditText
            android:id="@+id/editPrice_Per"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
           android:inputType="phone"
           android:fontFamily="sans-serif-light"
           android:gravity="center"
            android:lines="1"
            android:maxLines="1" />

    </LinearLayout>  

 <LinearLayout
     android:layout_width="309dp"
     android:layout_height="40dp"
     android:layout_weight="0.04"
     android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/totalAmountTextView"
            android:text="@string/totalAmount"
  			android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/fillupmenubutton"    
            android:fontFamily="sans-serif-light"       
            android:gravity="center"
            android:layout_height="40dp"/>
        <EditText
            android:id="@+id/editTotal_Cost"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"            
           android:inputType="phone"
           android:fontFamily="sans-serif-light"
           android:gravity="center"
            android:lines="1" 
            />


    </LinearLayout> 
             <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
             
             android:orientation="horizontal" >          
        <Button
            android:id="@+id/calcTipAmountButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background = "@drawable/fillupmenubutton"
			
			android:fontFamily="sans-serif-light"
            android:text="@string/calculateAmount"/>
        
        </LinearLayout>
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
             android:paddingBottom="10dp"
             android:gravity="bottom"
             android:orientation="horizontal" >

         <Button
             android:id="@+id/btn_Save"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/fillupmenubutton"
             android:fontFamily="sans-serif-light"
             android:text="@string/save"
              />

             <Button
                 android:id="@+id/btn_Cancel"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background = "@drawable/fillupmenubutton"
					
					android:fontFamily="sans-serif-light"
                 android:text="@string/cancel" />
</LinearLayout>
             
  <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
             android:gravity="bottom"
             android:orientation="horizontal" >

       

  <Button
      android:id="@+id/btn_menu"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/fillupmenubutton"
      android:fontFamily="sans-serif-light"
      android:text="@string/menu"
      />
</LinearLayout>
</LinearLayout>
 