<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp" 
        android:background="#FFFFFF"	>


<fragment 
    android:id="@+id/map"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    class="com.google.android.gms.maps.MapFragment" />

<Button
        android:id="@+id/bNavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:text="@string/start" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
 
<TextView
            android:text="@string/totalDistance"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
 
        <EditText
            android:id="@+id/editTotalDistance"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:lines="1" 
            />
        </LinearLayout>
        	    <Button
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:layout_width="match_parent"
		android:text="@string/menu"
		android:background="#E5E5FF"
		android:textColor="#0000E6"
		android:id="@+id/btn_menu"/>


</LinearLayout>
