<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="#FFFFFF">
	
<TableLayout
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/layout">
	
    <TableRow
			
		android:layout_weight="1"
		android:background="@drawable/detailsmenubutton"
		android:paddingLeft="50dp"
		android:paddingTop="20dp"
		android:paddingRight="10dp">

 
        <EditText
            android:id="@+id/editReg"
            android:layout_weight="2"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="50sp"
            android:background="#FFFFFF"
            android:hint="ENTER REG"/>
		
	</TableRow>
	
<TableRow
		android:layout_height="0dip"
		android:layout_weight="1"
		android:padding="20dp">
		
        <TextView
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/detailsmenubutton"
           android:fontFamily="sans-serif-light"
           android:gravity="center"
            android:layout_height="40dp"/>
 
        <EditText
            android:id="@+id/editName"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:lines="1" 
            android:hint="Full name"/>
		
	</TableRow>
	<TableRow
		android:layout_height="0dip"
		android:layout_weight="1"
		android:padding="20dp">
		
        <TextView
            android:text="@string/company"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/detailsmenubutton"
           android:fontFamily="sans-serif-light"
           android:gravity="center"
            android:layout_height="40dp"/>
 
        <EditText
            android:id="@+id/editCompany"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:lines="1" 
            android:hint="Company"/>
		
	</TableRow>

		
<TableRow
		android:layout_height="0dip"
		android:layout_weight="1"
		android:padding="20dp">
		
        <TextView
            android:text="@string/startMileage"
            android:layout_width="0dp"
            android:layout_weight="1"
             android:background="@drawable/detailsmenubutton"
           android:fontFamily="sans-serif-light"
           android:gravity="center"
            android:layout_height="40dp"/>
 
        <EditText
            android:id="@+id/editStartMileage"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="phone"
            android:lines="1" 
            android:hint="Enter start Mileage"/>
		
	</TableRow>
	
<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"
             android:gravity="bottom"
             android:orientation="horizontal" >

       

  <Button
      android:id="@+id/btn_editDetails"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/detailsmenubutton"
      android:fontFamily="sans-serif-light"
      android:text="@string/edit_your_details"
      />
</LinearLayout>
</TableLayout>

</LinearLayout>